src_old/objects/Contact.object
<CustomObject>
    <fields>
        <fullName>AccountAddressId__c</fullName>
        <label>Account Address Id</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Name_Copy__c</fullName>
        <description>This field carries the name of the company/account the contact was originally associated with.</description>
        <label>Company</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ApexJobName__c</fullName>
        <label>ApexJobName</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AxisId__c</fullName>
        <label>Axis Id</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BillToAccount__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>BillTo Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Billing Addresses</relationshipLabel>
        <relationshipName>Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BulkImportStatus__c</fullName>
        <label>BulkImportStatus</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ContactId__c</fullName>
        <externalId>true</externalId>
        <label>Contact Id</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>ContactType__c</fullName>
        <label>Contact Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Supervisor</fullName>
                </value>
                <value>
                    <fullName>Engagement Specialist</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CustomerMaxHoursPerWeek__c</fullName>
        <label>Customer Max Hours Per Week</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DivisionNumber__c</fullName>
        <label>Division Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EmployeeId__c</fullName>
        <label>Employee Id</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HomeGeoLocation__c</fullName>
        <label>HomeGeoLocation</label>
        <scale>8</scale>
        <type>Location</type>
    </fields>
    <fields>
        <fullName>Is3PLReq__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is 3PL Req</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ManagerId__c</fullName>
        <label>Manager Id</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MaxCheckInTime__c</fullName>
        <label>Max Check In Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>MaxCheckOutTime__c</fullName>
        <label>Max Check Out Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>OneHubThirdPartyAgencyContactId__c</fullName>
        <externalId>true</externalId>
        <label>OneHub Third Party Agency ContactId</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>PinHash__c</fullName>
        <label>Pin Hash</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pin__c</fullName>
        <label>Pin</label>
        <length>20</length>
        <maskChar>asterisk</maskChar>
        <maskType>all</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Inactive</fullName>
                </value>
                <value>
                    <fullName>Suspended</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>UpdateSequence__c</fullName>
        <label>Update Sequence</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>